ops/k8s/overlays/test/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: l4h-ingress
  namespace: l4h
spec:
  rules:
  - host: l4h.74-208-77-43.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
  - host: cannlaw.74-208-77-43.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8080
      - path: /gateway
        pathType: Prefix
        backend:
          service:
            name: upload-gateway
            port:
              number: 7070
  - host: api.74-208-77-43.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8080
